== 1.0.4 / 2008-11-17

* 3 minor enhancements
  * Updated array traversal code to be recursive by default
  * Updated visitor code to use class instances instead of class-level methods for greater flexibility
  * Updated error handling to include parsing context in error message

== 1.0.0 / 2008-06-29

* 1 major enhancement
  * Birthday!